security-group.yaml
Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String

  VPC:
    Type: AWS::EC2::VPC::Id
    Description: Choose which VPC the security groups should be deployed to

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String

Resources:

  SecurityGroupDB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: database
      GroupDescription: Allow access to SQL Server
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: !Ref VpcCIDR
        Description: MSSQL SERVER
      - IpProtocol: tcp
        FromPort: 445
        ToPort: 445
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 139
        ToPort: 139
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 135
        ToPort: 135
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: udp
        FromPort: 137
        ToPort: 138
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5100
        CidrIp: !Ref VpcCIDR
        Description: DCOM
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
        Description: Internet Access
      Tags:
      - Key: EnvironmentName
        Value: !Ref EnvironmentName


  SecurityGroupApplication:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: application
      GroupDescription: Allow access to SQL Server
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5100
        CidrIp: !Ref VpcCIDR
        Description: DCOM
      - IpProtocol: tcp
        FromPort: 445
        ToPort: 445
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 139
        ToPort: 139
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 135
        ToPort: 135
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: udp
        FromPort: 137
        ToPort: 138
        CidrIp: !Ref VpcCIDR
        Description: FileSystem 
      - IpProtocol: tcp
        FromPort: 5985
        ToPort: 5985
        CidrIp: !Ref VpcCIDR
        Description: Access via WinRM
      
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
        Description: Internet Access
      Tags:
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  SecurityGroupWeb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: web
      GroupDescription: Allow access to Web servers
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5100
        CidrIp: !Ref VpcCIDR
        Description: DCOM
      - IpProtocol: tcp
        FromPort: 445
        ToPort: 445
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 139
        ToPort: 139
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 135
        ToPort: 135
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: udp
        FromPort: 137
        ToPort: 138
        CidrIp: !Ref VpcCIDR
        Description: FileSystem
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
        Description: Internet Access
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
        Description: Internet Access
      - IpProtocol: tcp
        FromPort: 5985
        ToPort: 5985
        CidrIp: !Ref VpcCIDR
        Description: Access via WinRM
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
        Description: Egress access
      Tags:
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  SecurityGroupELB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: elb
      GroupDescription: Allow access to ELB
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
        Description: Internet Access
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
        Description: Internet Access
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
        Description: Internet Access
      Tags:
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  SecurityGroupNAT:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: nat instances
      GroupDescription: Allow access to SQL Server
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 172.37.1.0/24
        Description: HTTP
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 172.37.1.0/24
        Description: HTTPS
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 172.37.11.0/24
        Description: HTTP
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 172.37.11.0/24
        Description: HTTPS
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 172.37.21.0/24
        Description: HTTP
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 172.37.21.0/24
        Description: HTTPS
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref VpcCIDR
        Description: SSH
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
        Description: Internet Access HTTP
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
        Description: Internet Access HTTPS
      Tags:
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

Outputs:

  LoadBalancerSecurityGroup:
    Description: A reference to the security group for load balancers
    Value: !Ref SecurityGroupELB

  WebSecurityGroup:
    Description: A reference to the security group for load balancers
    Value: !Ref SecurityGroupWeb
