vpc.yaml
Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 172.33.32.0/21

  PublicASubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 172.33.32.0/24

  PublicBSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 172.33.33.0/24

  PublicCSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 172.33.34.0/24

  PrivateASubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 172.33.36.0/24

  PrivateBSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 172.33.37.0/24
    
  PrivateCSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 172.33.38.0/24

    Description: 'VPC: public and private subnets in three availability zones'

#----FIM Parameters----------------------------------------------

# Create all basic network resources: VPC, Subnets, Gateways, Routes and NetworkACL
# Public subnets are acessible through internet and private subnets have to use the natgateway to eggress to internet (ingress is not allowed)
Resources:

  # CRIANDO VPC
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: 'vpc-medusa'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # CRIANDO INTERNET GATEWAY
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: Name
        Value: 'igw-medusa'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # CONECTANDO O INTERNET GATEWAY COM O VPC
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # CRIANDO SUBNETS PUBLICAS E PRIVADAS
  # A
  SubnetAPublic:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: 'us-east-1a'
      CidrBlock: !Ref PublicASubnetCIDR
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'subnet-public-us-east-1a'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  SubnetAPrivate:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: 'us-east-1a'
      CidrBlock: !Ref PrivateASubnetCIDR
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'subnet-private-us-east-1a'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # B
  SubnetBPublic:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: 'us-east-1b'
      CidrBlock: !Ref PublicBSubnetCIDR
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'subnet-public-us-east-1b'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  SubnetBPrivate:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: 'us-east-1b'
      CidrBlock: !Ref PrivateBSubnetCIDR
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'subnet-private-us-east-1b'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # C
  SubnetCPublic:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: 'us-east-1c'
      CidrBlock: !Ref PublicCSubnetCIDR
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'subnet-public-us-east-1c'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  SubnetCPrivate:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: 'us-east-1c'
      CidrBlock: !Ref PrivateCSubnetCIDR
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: 'subnet-private-us-east-1c'
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # CRIANDO ROUTE TABLES PUBLICAS E PRIVADAS
  # A
  RouteTablePublic: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: rt-subnet-public-a
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  RouteTablePrivate: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: rt-subnet-private-a
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # B
  RouteTableBPublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: rt-subnet-public-b
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  RouteTableBPrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: rt-subnet-private-b
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # C
  RouteTableCPublic:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: rt-subnet-public-c
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  RouteTableCPrivate:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: rt-subnet-private-c
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # ASSOCIANDO ROUTE TABLES COM SUBNETS
  # A
  RouteTableAssociationAPublic:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAPublic
      RouteTableId: !Ref RouteTablePublic

  RouteTableAssociationAPrivate:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetAPrivate
      RouteTableId: !Ref RouteTablePrivate

  # B
  RouteTableAssociationBPublic:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetBPublic
      RouteTableId: !Ref RouteTableBPublic

  RouteTableAssociationBPrivate:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetBPrivate
      RouteTableId: !Ref RouteTableBPrivate

  # C
  RouteTableAssociationCPublic:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetCPublic
      RouteTableId: !Ref RouteTableCPublic

  RouteTableAssociationCPrivate:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetCPrivate
      RouteTableId: !Ref RouteTableCPrivate

  # CRIANDO A ROUTE PUBLICA CONECTANDO NA ROUTE TABLE PUBLICA E NO INTERNET GW -> SAÍDA PARA INTERNET
  RouteTablePublicInternetRoute: 
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  RouteTablePublicBInternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTableBPublic
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  RouteTablePublicCInternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTableCPublic
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  # CRIANDO NETWORK ACLs
  # A
  NetworkAclPublic:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Public
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  NetworkAclPrivate:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private
      - Key: EnvironmentName
        Value: !Ref EnvironmentName

  # ASSOCIANDO NETWORK ACL NA SUBNET
  # A
  SubnetNetworkAclAssociationAPublic:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetAPublic
      NetworkAclId: !Ref NetworkAclPublic

  SubnetNetworkAclAssociationAPrivate:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetAPrivate
      NetworkAclId: !Ref NetworkAclPrivate

  # B
  SubnetNetworkAclAssociationBPublic:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetBPublic
      NetworkAclId: !Ref NetworkAclPublic

  SubnetNetworkAclAssociationBPrivate:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetBPrivate
      NetworkAclId: !Ref NetworkAclPrivate

  # C
  SubnetNetworkAclAssociationCPublic:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetCPublic
      NetworkAclId: !Ref NetworkAclPublic

  SubnetNetworkAclAssociationCPrivate:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref SubnetCPrivate
      NetworkAclId: !Ref NetworkAclPrivate

  # RULES DE ENTRADA E SAÍDA DO NETWORK ACL
  # NETWORK ACL PUBLICA
  NetworkAclEntryInPublicAllowAll:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'

  NetworkAclEntryOutPublicAllowAll:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'

  # NETWORK ACL PRIVADA
  NetworkAclEntryInPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'

  NetworkAclEntryOutPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'

  # CRIANDO ELASTIC IP, CRIANDO NAT GATEWAY E ASSOCIANDO EIP, CRIANDO A ROUTE PRIVADA CONECTANDO NA ROUTE TABLE PRIVADA E NO NAT GW -> SAÍDA PARA INTERNET, ENTRADA NÃO PERMITIDA
  # A
  EIP1A:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: 'EIP-NatGateway1A'
  NatGateway1A:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EIP1A.AllocationId'
      SubnetId: !Ref SubnetAPublic
      Tags:
      - Key: Name
        Value: 'NatGateway1A'
  Route:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTablePrivate
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway1A
  
  # B
  EIP1B:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: 'EIP-NatGateway1B'
  NatGateway1B:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EIP1B.AllocationId'
      SubnetId: !Ref SubnetBPublic
      Tags:
      - Key: Name
        Value: 'NatGateway1B'
  Route:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTableBPrivate
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway1B

  # C
  EIP1C:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: 'EIP-NatGateway1C'
  NatGateway1C:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'EIP1C.AllocationId'
      SubnetId: !Ref SubnetCPublic
      Tags:
      - Key: Name
        Value: 'NatGateway1C'
  Route:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTableCPrivate
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway1C

#----FIM Resources-----------------------------------------------
Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  VpcCIDR:
    Description: A reference to the created VPC
    Value: !Ref VpcCIDR

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [",", [!Ref SubnetAPublic, !Ref SubnetBPublic, !Ref SubnetCPublic]]

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [",", [!Ref SubnetAPrivate, !Ref SubnetBPrivate, !Ref SubnetCPrivate]]

  SubnetAPublic:
    Description: A reference to the public subnet in the Availability Zone A
    Value: !Ref SubnetAPublic

  SubnetBPublic:
    Description: A reference to the public subnet in the Availability Zone B
    Value: !Ref SubnetBPublic

  SubnetCPublic:
    Description: A reference to the public subnet in the Availability Zone C
    Value: !Ref SubnetCPublic

  SubnetAPrivate:
    Description: A reference to the private subnet in the Availability Zone A
    Value: !Ref SubnetAPrivate

  SubnetBPrivate:
    Description: A reference to the private subnet in the Availability Zone B
    Value: !Ref SubnetBPrivate

  SubnetCPrivate:
    Description: A reference to the private subnet in the Availability Zone C
    Value: !Ref SubnetCPrivate
